# SuccinctEdgeWithStreaming

./: CMakeCache.txt  CMakeLists.txt  DataBlock.cpp  DataBlock.hpp  DataSeries.cpp  DataSeries.hpp  DataTypeStore.cpp  DataTypeStore.hpp  DataWindowUtil.hpp  DatastructureConstant.hpp  JoinLine.cpp  JoinLine.hpp  JoinVariables.hpp  LiteMatDictionary.hpp  Makefile  MiniBatchUtil.hpp  PropertyLiteMatDictionary.cpp  PropertyLiteMatDictionary.hpp  RDFStorage.cpp  RDFStorage.hpp  RDFTypeStore.cpp  RDFTypeStore.hpp  README.md  RankBaseElement.hpp  ShowResults.hpp  StrDataRankBaseElement.cpp  StrDataRankBaseElement.hpp  SuccinctEdge_cata  TCPReceiver.cpp  TCPReceiver.hpp  TimeUtil.hpp  TripleStore.cpp  TripleStore.hpp  cmake_install.cmake  main.cpp  quickSortTS.hpp  succinct_edge.cbp
ABAB_tbox/: lite_mat_properties.txt
simu_tbox/: lite_mat_concepts.txt  lite_mat_properties.txt
store/lubm/: DTS_ele0.st  DTS_ele01_bitmap.st  DTS_ele1.st  DTS_ele12_bitmap.st  DTS_ele2.st  RDFTypeStore.st  (+6 more)
test_data/: generation_data  generation_data_sample  main.cpp  sensor_test copie.nt  sensor_test.nt  temp.txt  test_ABAB.nt
test_query/: lubm_mt_test.sparql  lubm_query.sparql  lubm_query_with_reason.sparql  lubm_query_with_reason_temp.sparql  new_query.sparql  new_query_ordered.sparql  po_tp_query.sparql  po_tp_query_temp.sparql  po_tp_vs_p_tp.sparql  sensor_test copie.sparql  sensor_test.sparql  sensor_test1.sparql  sensor_test2.sparql  sp_tp_query.sparql  sp_tp_query_temp.sparql  test_ABAB.sparql  test_new_query.sparql  triple_pattern_query.sparql
test_topic_map/: topic_map.txt
(+6 files in other folders)
